Fixed In-Accurate Active Tab In File Explorer While Dragging.